--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "express": "4.17.1",
     "husky": "^6.0.0",
     "joi": "^17.4.0",
-    "lint-staged": "^11.0.0",
     "morgan": "1.10.0",
     "uuid": "^8.3.2"
   },
@@ -25,6 +24,12 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "lint-staged": "^11.0.0",
     "nodemon": "2.0.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
