--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+      "**/*.{js, json}": "npm run lint"
     }
   }
 }
