--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "pre-commit": "lint-staged"
     },
     "lint-staged": {
-      "**/*.{js, json}": "npm run lint"
+      "*": "npm run lint"
     }
   }
 }
