--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "express": "4.17.1",
     "husky": "^6.0.0",
     "joi": "^17.4.0",
-    "morgan": "1.10.0",
-    "uuid": "^8.3.2"
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
