--- a/package.json
+++ b/package.json
@@ -26,5 +26,16 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "nodemon": "2.0.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js}": [
+      "npm run lint:fix",
+      "git add"
+    ]
   }
 }
