--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.2.5",
     "lint-staged": "^11.0.0",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "prettier": "^2.3.1"
   }
 }
