--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.12.14",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
