--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "morgan": "1.10.0",
     "multer": "^1.4.2",
     "passport-jwt": "^4.0.0",
-    "uuidv4": "^6.2.11"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
